--- a/houm.css
+++ b/houm.css
@@ -21,20 +21,50 @@ body {
 	margin-top: 2%;
 }
 
-.fa-html5 {
-	color: #E34C26;
-}
-
 #showcase h1{
 	font-family: Lato;
 	color: #464647;
 }
 
-#showcase img {
-	height: 413px;
-}
-
 .container {
 	padding-right: 40px;
 	padding-left: 40px;
+}
+
+.colorgameslot {
+	position: relative;
+	width: 50%;
+}
+
+.colorgame {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
+}
+
+.colorgameslot:hover .overlay {
+  opacity: 0.9;
+}
+
+h3 {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
 }
