--- a/houm.css
+++ b/houm.css
@@ -1,19 +1,20 @@
 .navbar-default {
-	background: rgba(239, 239, 239, 0.85);
+	background: rgba(30, 30, 30, 0.85);
 	font-family: Lato;
 	font-weight: 400;
 	color: #111111;
+	border: 0;
 }
 
 .navbar-brand {
 	font-weight: 700;
-	color: #111111 !important;
+	color: #FFFFFF !important;
 }
 
 body {
 	color: black;
 	margin-top: 50px;
-	background-color: #f7f7f7;
+	background-color: #232323;
 }
 
 .row div {
@@ -52,7 +53,7 @@ body {
   width: 100%;
   opacity: 0;
   transition: .5s ease;
-  background-color: #008CBA;
+  background-color: steelblue;
 }
 
 .colorgameslot:hover .overlay {
@@ -61,7 +62,9 @@ body {
 
 h3 {
   color: white;
-  font-size: 20px;
+  font-size: 32px;
+  font-family: Lato;
+  font-weight: 400;
   position: absolute;
   top: 50%;
   left: 50%;
