--- a/houm.css
+++ b/houm.css
@@ -54,15 +54,18 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  height: 100%;
-  width: 100%;
   opacity: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
   transition: .5s ease;
   background-color: steelblue;
 }
 
 .colorgameslot:hover .overlay {
-  opacity: 0.9;
+  bottom: 0;
+  height: 100%;
+  opacity: 0.85;
 }
 
 h3 {
