--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ section {
 }
 
 #minust .row {
-	padding: 30px 0;
+  padding-top: 20px;
 }
 
 .fa-html5 {
@@ -69,7 +69,7 @@ section {
 
 h1 {
 	font-family: Lato;
-	font-weight: 700;
+  color: #000;
 }
 
 hr { 
