--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 
 .parallaxKaks {
     /* The image used */
-    background-image: url('../img/taustkaks.png');
+    background-image: url('../img/taustkaks.jpg');
 
     /* Full height */
     height: 100%; 
@@ -107,6 +107,31 @@ body {
     background: #fcfcfc;
     height: 190px;
     padding-top: 70px;
+}
+
+.leht h1 {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.leht h1:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.leht:hover h1 {
+  padding-right: 25px;
+}
+
+.leht:hover h1:after {
+  opacity: 1;
+  right: 0;
 }
 
 .uks {
