--- a/landingPage/landing.css
+++ b/landingPage/landing.css
@@ -1,18 +1,15 @@
-#content {
-	text-align: center;
-	padding: 25%;
-}
 
-body {
-	background-image: url(https://source.unsplash.com/2UuhMZEChdc);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	font-family: Lato;
-}
 
-html {
-	height: 100%;
+header {
+	height: 100vh;
+    background-image: url(https://source.unsplash.com/2UuhMZEChdc);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 h1, h3 {
