--- a/css/style.css
+++ b/css/style.css
@@ -141,10 +141,10 @@ body {
 }
 
 .uks {
-    background: #ededed;
+    background: #e2edff;
 }
 
 .kaks {
-    background: #dbdbdb;
+    background: #c9ddff;
 }
 
