--- a/css/style.css
+++ b/css/style.css
@@ -4,44 +4,22 @@ body, html {
 
 body {
     margin: 0;
+    background-image: url('../img/taustkolm.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-.parallax {
-    /* The image used */
-    background-image: url('../img/taust.jpg');
-
-    /* Full height */
-    height: 100%; 
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    text-align: center;
-}
-
-.parallaxKaks {
-    /* The image used */
-    background-image: url('../img/taustkaks.jpg');
-
-    /* Full height */
-    height: 100%; 
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
     text-align: center;
 }
 
 #logo {
-    max-width: 50%;
-    margin-top: 15%;
+	padding-top: 20%;
+    max-width: 500px;
+}
+
+.parallax {
+	height: 100%;
+	text-align: center;
 }
 
 .siniVahe {
@@ -85,6 +63,7 @@ body {
     background: #fcfcfc;
     margin: auto;
     box-shadow: 0px 0px 50px rgba(40, 40, 40, 1);
+    text-align: center;
 }
 
 .oskus h2 {
@@ -111,8 +90,9 @@ body {
 
 .leht {
     background: #fcfcfc;
-    height: 190px;
-    padding-top: 70px;
+    height: 250px;
+    padding-top: 100px;
+    text-align: center;
 }
 
 .leht h1 {
@@ -148,3 +128,19 @@ body {
     background: #c9ddff;
 }
 
+.jalus{
+	background-color: rgba(22, 22, 22, 0.7);
+	margin-top: 18px;
+}
+
+.copy {
+	text-align: center;
+	color: #f2f2f2;
+	width: 100%;
+	padding-top: 12px;
+}
+
+.copy .siniVahe {
+	height: 1px;
+    background: #37abc8;
+}
