--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body {
 
 .oskus {
     border-radius: 10px;
-    height: 230px;
+    height: 250px;
     background: #fcfcfc;
     margin: auto;
     box-shadow: 0px 0px 50px rgba(40, 40, 40, 1);
@@ -71,11 +71,12 @@ body {
 }
 
 .oskus .siniVahe {
-    margin-bottom: 18px;
+    margin-bottom: 25px;
 }
 
 .tahed {
     color: #37abc8;
+    padding-bottom: 10px;
 }
 
 .portfoolio {
@@ -87,6 +88,9 @@ body {
     font-weight: 300;
 }
 
+.and {
+	font-weight: 400;
+}
 
 .leht {
     background: #fcfcfc;
