--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,10 @@ body {
     padding-bottom: 10px;
 }
 
+.tkst {
+	font-weight: 300;
+}
+
 .portfoolio {
     margin-top: 20px;
     box-shadow: 0px 0px 50px rgba(40, 40, 40, 1);
