--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body, html {
-    height: 100%;
+    height: 100vh;
 }
 
 body {
@@ -18,7 +18,7 @@ body {
 }
 
 .parallax {
-	height: 100%;
+	height: 100vh;
 	text-align: center;
 }
 
