--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,37 @@ body {
   }
 }
 
+@media screen and (max-width: 1280px) {
+  #logo {
+    padding-top: 25%;
+    max-width: 80%;
+    margin-left: 10px;
+  }
+
+  .oskus {
+    max-width: 80%;
+    margin-bottom: 25px;
+  }
+
+  .tkst {
+   font-size: 3rem;
+  }
+
+  .sisu p {
+    font-size: 1em;
+    padding: 0px 15px;
+    padding-bottom: 20px;
+  }
+
+  body, html {
+    min-height: 100%;
+  }
+
+  .jalus p{
+    font-size: 12px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   #logo {
     padding-top: 50%;
